@@ -19,20 +19,13 @@ boost_lib_serialization := serialization wserialization
 boost_lib_stacktrace := stacktrace_noop stacktrace_addr2line stacktrace_backtrace stacktrace_basic
 boost_lib_test := prg_exec_monitor test_exec_monitor unit_test_framework
 
-py2versions = $(shell pyversions -rv)
-py3versions = $(shell py3versions -rv)
-py2verids = $(subst .,,$(py2versions))
-py3verids = $(subst .,,$(py3versions))
-pyversions = $(py2versions) $(py3versions)
-pyverids = $(py2verids) $(py3verids)
+pyversions = $(shell py3versions -rv)
+pyverids = $(subst .,,$(pyversions))
 
-# These are special cases for suffixes.  Generally come from --python-buildid, so begin with a dash.
+# These are special cases for suffixes.
 boost_suffixes_python := $(pyverids)
 boost_suffixes_numpy := $(pyverids)
 boost_suffixes_mpi-python := $(pyverids)
-
-py2default = $(subst .,,$(shell pyversions -dv))
-py3default = $(subst .,,$(shell py3versions -dv))
 
 # Files that are generated by filtering a template
 filtered_files =
@@ -205,7 +198,7 @@ JAM = $(b2) $(JOBS) -q -d2 $(JAM_OPT) --layout=system --ignore-site-config --use
 JAM_DOC = $(b2) $(JOBS) -q -d2 --ignore-site-config --user-config=$(CURDIR)/user-config-doc.jam
 
 %:
-	dh $@ --with python2 --with python3
+	dh $@ --with python3
 
 override_dh_auto_configure: user-config.jam make-debhelper
 ifeq ($(DEB_BUILD_ARCH), x32)
@@ -308,76 +301,8 @@ override_dh_install-arch: override_dh_install-common
 	# package libboost-date-time$(PKGVERSION)-dev
 	dh_installdocs -plibboost-date-time$(PKGVERSION)-dev libs/date_time/data
 
-# Debian decorates the python-using libraries with a python version suffix ("-py27")
-# Create symlinks for the upstream name to the default python version.
-# There is a separate set of links for each Python major version.
-
-	# Python2 compatibility links
-	dh_link -plibboost-numpy$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy$(py2default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy.a
-	dh_link -plibboost-numpy$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy$(py2default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy.so
-
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py2default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python.a
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py2default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python.so
-
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py2default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python.a
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py2default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python.so
-
-	# Python3 compatibility links
-	dh_link -plibboost-numpy$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy$(py3default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy3.a
-	dh_link -plibboost-numpy$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy$(py3default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_numpy3.so
-
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py3default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3.a
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py3default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3.so
-
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py3default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3.a
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py3default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3.so
-
-	# Python3 old debian compat links
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py3default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3-py$(py3default).a
-	dh_link -plibboost-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python$(py3default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_python3-py$(py3default).so
-
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py3default).a \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3-py$(py3default).a
-	dh_link -plibboost-mpi-python$(PKGVERSION)-dev \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python$(py3default).so \
-	   usr/lib/$(DEB_HOST_MULTIARCH)/libboost_mpi_python3-py$(py3default).so
-
 	# package libboost-mpi-python$(SOVERSION)
 	dh_install -plibboost-mpi-python$(SOVERSION)
-
-	# python2 install
-	dh_installdirs -plibboost-mpi-python$(SOVERSION) usr/lib/python2.7/dist-packages/boost
-	dh_install -plibboost-mpi-python$(SOVERSION) libs/mpi/build/__init__.py usr/lib/python2.7/dist-packages/boost/
-	cp stage-2.7/lib/mpi.so debian/libboost-mpi-python$(SOVERSION)/usr/lib/python2.7/dist-packages/boost/ || true
 
 	# python3 install
 	dh_installdirs -plibboost-mpi-python$(SOVERSION) usr/lib/python3/dist-packages/boost
